[gd_scene load_steps=28 format=2]

[ext_resource path="res://PTSansNarrow-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://girl8/base.png" type="Texture" id=2]
[ext_resource path="res://backs/1.jpg" type="Texture" id=3]
[ext_resource path="res://TextureButton.gd" type="Script" id=4]
[ext_resource path="res://round_button2.png" type="Texture" id=6]
[ext_resource path="res://gallery.png" type="Texture" id=7]
[ext_resource path="res://star.png" type="Texture" id=8]
[ext_resource path="res://dollar.png" type="Texture" id=9]
[ext_resource path="res://gallery.gd" type="Script" id=10]
[ext_resource path="res://knockout.gd" type="Script" id=11]
[ext_resource path="res://arrow_button.png" type="Texture" id=12]
[ext_resource path="res://close_button.png" type="Texture" id=13]
[ext_resource path="res://round_button.png" type="Texture" id=14]
[ext_resource path="res://actions.gd" type="Script" id=15]
[ext_resource path="res://Control.gd" type="Script" id=16]
[ext_resource path="res://video_icon.png" type="Texture" id=17]
[ext_resource path="res://TextureRect.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
resource_name = "scale"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 637, 100 ), Vector2( 660, 156 ), Vector2( 637, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.92, 0.92 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 2
outline_color = Color( 0.137255, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 82
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
extra_spacing_char = -3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 300
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 56
extra_spacing_top = -8
extra_spacing_char = 4
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 55
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -31
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 55
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -31
extra_spacing_char = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 55
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -31
extra_spacing_bottom = 9
extra_spacing_char = 3
extra_spacing_space = 4
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
script = ExtResource( 18 )

[node name="character" type="TextureButton" parent="."]
margin_left = 637.0
margin_top = 100.0
margin_right = 1237.0
margin_bottom = 900.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="character"]
anims/scale = SubResource( 1 )

[node name="DollarField" type="Sprite" parent="."]
position = Vector2( 240, 80 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 14 )

[node name="StarField" type="Sprite" parent="."]
position = Vector2( 240, 200 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 14 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 16 )

[node name="Score" type="Label" parent="Control"]
margin_left = 136.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 125.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Stars" type="Label" parent="Control"]
margin_left = 136.0
margin_top = 144.0
margin_right = 176.0
margin_bottom = 245.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="add_stars_panel" type="TextureButton" parent="Control"]
margin_left = 400.0
margin_top = 120.0
margin_right = 459.0
margin_bottom = 184.0
rect_rotation = 45.0
rect_scale = Vector2( 1.8, 1.8 )
texture_normal = ExtResource( 13 )

[node name="panel_add_stars" type="TextureRect" parent="Control"]
visible = false
margin_left = 40.0
margin_top = 264.0
margin_right = 831.0
margin_bottom = 674.0
rect_scale = Vector2( 0.5, 0.7 )
rect_clip_content = true
texture = ExtResource( 7 )

[node name="buy_star" type="TextureButton" parent="Control/panel_add_stars"]
margin_left = 32.0
margin_top = 45.7143
margin_right = 313.0
margin_bottom = 109.714
rect_scale = Vector2( 2.6, 2.2 )
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="Control/panel_add_stars/buy_star"]
anchor_right = 0.385
margin_left = 18.4615
margin_top = 4.44446
margin_right = 363.461
margin_bottom = 145.445
rect_scale = Vector2( 0.6, 0.5 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "1      = 100$"

[node name="TextureRect" type="TextureRect" parent="Control/panel_add_stars/buy_star"]
margin_left = 35.3846
margin_top = 5.84415
margin_right = 135.385
margin_bottom = 105.844
rect_scale = Vector2( 0.568245, 0.510575 )
texture = ExtResource( 8 )

[node name="buy_star_3" type="TextureButton" parent="Control/panel_add_stars"]
margin_left = 32.0
margin_top = 217.143
margin_right = 313.0
margin_bottom = 281.143
rect_scale = Vector2( 2.6, 2.2 )
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="Control/panel_add_stars/buy_star_3"]
anchor_right = 0.385
margin_left = 18.4615
margin_top = 4.44446
margin_right = 363.461
margin_bottom = 145.445
rect_scale = Vector2( 0.6, 0.5 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "3      = 280$"

[node name="TextureRect" type="TextureRect" parent="Control/panel_add_stars/buy_star_3"]
margin_left = 35.3846
margin_top = 7.14278
margin_right = 135.385
margin_bottom = 107.143
rect_scale = Vector2( 0.584615, 0.510426 )
texture = ExtResource( 8 )

[node name="gallery" type="TextureRect" parent="."]
visible = false
margin_left = 488.0
margin_top = 32.0
margin_right = 1279.0
margin_bottom = 442.0
rect_scale = Vector2( 1.70899, 2.2038 )
texture = ExtResource( 7 )
expand = true
script = ExtResource( 10 )

[node name="close_button" type="TextureButton" parent="gallery"]
margin_left = 734.936
margin_top = -7.26019
margin_right = 797.936
margin_bottom = 56.7398
rect_scale = Vector2( 1.3, 1 )
texture_normal = ExtResource( 13 )

[node name="right_arrow" type="TextureButton" parent="gallery"]
margin_left = 744.298
margin_top = 174.244
margin_right = 807.298
margin_bottom = 237.244
rect_scale = Vector2( 1.3, 1 )
texture_normal = ExtResource( 12 )

[node name="left_arrow" type="TextureButton" parent="gallery"]
margin_left = 32.7678
margin_top = 235.956
margin_right = 95.7678
margin_bottom = 298.956
rect_rotation = 180.0
rect_scale = Vector2( 1.3, 1 )
texture_normal = ExtResource( 12 )

[node name="knockout" type="TextureRect" parent="."]
visible = false
margin_left = 488.0
margin_top = 32.0
margin_right = 1279.0
margin_bottom = 442.0
rect_scale = Vector2( 1.70899, 2.2038 )
texture = ExtResource( 7 )
expand = true
script = ExtResource( 11 )

[node name="close_button" type="TextureButton" parent="knockout"]
margin_left = 734.936
margin_top = -7.26019
margin_right = 797.936
margin_bottom = 56.7398
rect_scale = Vector2( 1.3, 1 )
texture_normal = ExtResource( 13 )

[node name="sual" type="Label" parent="knockout"]
margin_left = 342.893
margin_top = -42.6536
margin_right = 472.893
margin_bottom = 397.346
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "?"

[node name="knock" type="TextureButton" parent="knockout"]
margin_left = 257.462
margin_top = 319.448
margin_right = 538.462
margin_bottom = 383.448
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="knockout/knock"]
margin_left = 18.7245
margin_top = 18.1507
margin_right = 258.724
margin_bottom = 66.1507
rect_scale = Vector2( 1, 0.9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "BUTTON"
align = 1

[node name="Label" type="Label" parent="knockout"]
margin_left = -42.1301
margin_top = 333.969
margin_right = 197.87
margin_bottom = 381.969
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "PRICE"
align = 2

[node name="star" type="TextureRect" parent="knockout"]
margin_left = 196.022
margin_top = 329.885
margin_right = 296.022
margin_bottom = 429.885
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 8 )

[node name="rarety" type="Label" parent="knockout"]
visible = false
margin_left = 552.373
margin_top = 159.724
margin_right = 645.373
margin_bottom = 197.724
rect_scale = Vector2( 1, 0.9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "SIMPLE"

[node name="dublicat" type="Label" parent="knockout"]
visible = false
margin_left = 37.449
margin_top = 137.944
margin_right = 250.449
margin_bottom = 216.944
rect_scale = Vector2( 1, 0.9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Вам выпал дубликат
+3$/клик"

[node name="actions" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )

[node name="open_gallery" type="TextureButton" parent="actions"]
margin_left = 1480.0
margin_top = 648.0
margin_right = 1761.0
margin_bottom = 712.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="actions/open_gallery"]
margin_left = 37.3334
margin_top = 10.6667
margin_right = 382.333
margin_bottom = 151.667
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "GALLERY"
uppercase = true

[node name="multiplicator" type="TextureButton" parent="actions"]
margin_left = 1480.0
margin_top = 200.0
margin_right = 1761.0
margin_bottom = 264.0
rect_scale = Vector2( 1.5, 3 )
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="actions/multiplicator"]
anchor_right = 0.385
margin_left = -118.667
margin_top = 15.6667
margin_right = 226.333
margin_bottom = 156.667
rect_scale = Vector2( 0.6, 0.3 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "100$"
align = 2

[node name="Label2" type="Label" parent="actions/multiplicator"]
anchor_right = 0.385
margin_left = 35.3333
margin_top = 38.3333
margin_right = 380.333
margin_bottom = 179.333
rect_scale = Vector2( 0.6, 0.3 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "CLICK"
align = 1

[node name="Dollar2" type="Sprite" parent="actions/multiplicator"]
position = Vector2( 171.333, 18.6667 )
scale = Vector2( 0.4, 0.2 )
texture = ExtResource( 9 )

[node name="Dollar3" type="Sprite" parent="actions/multiplicator"]
position = Vector2( 105.333, 40.6667 )
scale = Vector2( 0.4, 0.2 )
texture = ExtResource( 9 )

[node name="Label3" type="Label" parent="actions/multiplicator"]
anchor_right = 0.385
margin_left = 55.9999
margin_top = 38.3333
margin_right = 400.999
margin_bottom = 179.333
rect_scale = Vector2( 0.6, 0.3 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "+1      /"

[node name="open_knockout" type="TextureButton" parent="actions"]
margin_left = 1480.0
margin_top = 864.0
margin_right = 1761.0
margin_bottom = 928.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="actions/open_knockout"]
margin_left = 37.3334
margin_top = 10.6667
margin_right = 382.333
margin_bottom = 151.667
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "KNOCKOUT"
uppercase = true

[node name="show_video" type="TextureButton" parent="actions"]
margin_left = 1480.0
margin_top = 48.0
margin_right = 1761.0
margin_bottom = 112.0
rect_scale = Vector2( 1.5, 2.3 )
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="actions/show_video"]
anchor_left = 0.128
anchor_top = 0.165
anchor_right = 0.385
anchor_bottom = 0.165
margin_left = 42.032
margin_top = 17.2661
margin_right = 387.032
margin_bottom = 158.266
rect_scale = Vector2( 0.6, 0.4 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "CLICK"
align = 1

[node name="video_icon" type="Sprite" parent="actions/show_video"]
position = Vector2( 58.6667, 32 )
texture = ExtResource( 17 )

[node name="Dollar" type="Sprite" parent="actions/show_video"]
position = Vector2( 132.667, 30.8696 )
scale = Vector2( 0.35, 0.25 )
texture = ExtResource( 9 )

[node name="Label2" type="Label" parent="actions/show_video"]
anchor_left = 0.128
anchor_top = 0.165
anchor_right = 0.385
anchor_bottom = 0.165
margin_left = -38.6346
margin_top = 17.2661
margin_right = 306.365
margin_bottom = 158.266
rect_scale = Vector2( 0.6, 0.4 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "+3   /"
align = 1

[node name="change_back" type="TextureButton" parent="actions"]
margin_left = 1480.0
margin_top = 405.0
margin_right = 1761.0
margin_bottom = 469.0
rect_scale = Vector2( 1.5, 2.3 )
texture_normal = ExtResource( 14 )

[node name="Label" type="Label" parent="actions/change_back"]
anchor_right = 0.385
margin_left = -0.666687
margin_top = 16.0869
margin_right = 344.333
margin_bottom = 157.087
rect_scale = Vector2( 0.6, 0.4 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "BACK"
align = 1

[node name="Dollar" type="Sprite" parent="actions/change_back"]
position = Vector2( 174.667, 20.4348 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 9 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 1.536
autoplay = true

[node name="Dollar" type="Sprite" parent="."]
position = Vector2( 76, 81 )
texture = ExtResource( 9 )

[node name="Star" type="Sprite" parent="."]
position = Vector2( 78, 196 )
texture = ExtResource( 8 )

[connection signal="changeGirl" from="character" to="character" method="_on_character_changeGirl"]
[connection signal="pressed" from="character" to="character" method="_on_character_pressed"]
[connection signal="pressed" from="Control/add_stars_panel" to="Control" method="_on_add_stars_panel_pressed"]
[connection signal="pressed" from="Control/panel_add_stars/buy_star" to="Control" method="_on_buy_star_pressed"]
[connection signal="pressed" from="Control/panel_add_stars/buy_star_3" to="Control" method="_on_buy_star_3_pressed"]
[connection signal="pressed" from="gallery/close_button" to="gallery" method="_on_close_button_pressed"]
[connection signal="pressed" from="gallery/right_arrow" to="gallery" method="_on_right_arrow_pressed"]
[connection signal="pressed" from="gallery/left_arrow" to="gallery" method="_on_left_arrow_pressed"]
[connection signal="pressed" from="knockout/close_button" to="knockout" method="_on_close_button_pressed"]
[connection signal="pressed" from="knockout/knock" to="knockout" method="_on_knock_pressed"]
[connection signal="pressed" from="actions/open_gallery" to="actions" method="_on_open_gallery_pressed"]
[connection signal="pressed" from="actions/multiplicator" to="actions" method="_on_multiplicator_pressed"]
[connection signal="pressed" from="actions/open_knockout" to="actions" method="_on_open_knockout_pressed"]
[connection signal="pressed" from="actions/show_video" to="actions" method="_on_show_video_pressed"]
[connection signal="pressed" from="actions/change_back" to="actions" method="_on_change_back_pressed"]
